be backward compatible with java 11